# Esp32Framework2

./: .clang-tidy  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.cpp
main/common/bridge/master_bridge/: IMasterBridge.hpp  MasterBridge.cpp  MasterBridge.hpp
main/common/bridge/slave_bridge/: ISlaveBridge.hpp  SlaveBridge.cpp  SlaveBridge.hpp
main/common/context/: CommonApiFactory.cpp  CommonApiFactory.hpp  ContextFactory.cpp  ContextFactory.hpp  Contexts.hpp  EspFactory.cpp  EspFactory.hpp  EspNowFactory.cpp  EspNowFactory.hpp  ICommonApiFactory.hpp  IContextFactory.hpp  IEspFactory.hpp  IEspNowFactory.hpp
main/common/esp/esp_error/: esp_error_if.hpp
main/common/esp/esp_file_systems/: EspLittleFs.cpp  EspLittleFs.hpp  IEspLittleFs.hpp  esp_littlefs_if.h
main/common/esp/esp_http_server/: EspHttpServer.cpp  EspHttpServer.hpp  IEspHttpServer.hpp  UriParamExtractor.hpp  esp_http_server_if.hpp
main/common/esp/esp_logger/: EspLogger.cpp  EspLogger.hpp  IEspLogger.hpp  esp_logger_if.hpp
main/common/esp/esp_now/: EspNow.cpp  EspNow.hpp  IEspNow.hpp  esp_now_if.hpp
main/common/esp/esp_nvs/: EspNvs.cpp  EspNvs.hpp  IEspNvs.hpp  esp_nvs_if.hpp
main/common/esp/free_rtos/: FreeRtosFactory.cpp  FreeRtosFactory.hpp  IFreeRtosFactory.hpp  free_rtos_if.hpp
main/common/function_tasks/: FunctionTask.cpp  FunctionTask.hpp  IFunctionTask.hpp
main/common/node/: INode.hpp  Node.cpp  Node.hpp  NodeStaticInfo.hpp  NodesStaticInfo.hpp  TaskStaticInfo.hpp
main/common/service_tasks/: IMasterServiceTasks.hpp  IServiceTasks.hpp  ISlaveServiceTasks.hpp  MasterServiceTasks.cpp  MasterServiceTasks.hpp  ServiceTasks.cpp  ServiceTasks.hpp
main/common/service_tasks/logging_task/: ILoggingTask.hpp  LoggingTask.cpp  LoggingTask.hpp
main/common/service_tasks/ota_task/: IOtaTask.hpp  OtaTask.cpp  OtaTask.hpp
main/common/service_tasks/status_task/: IStatusTask.hpp  StatusTask.cpp  StatusTask.hpp  StatusTaskMessages.hpp  TaskData.hpp  TaskStatusInfo.hpp
main/common/sub_tasks/: ISubTask.hpp  SubTask.cpp  SubTask.hpp
main/common/tasks/: IRtosQueue.hpp  IRtosQueueSet.cpp  IRtosQueueSet.hpp  IRtosTask.hpp  RtosQueue.cpp  RtosQueue.hpp  RtosQueueSet.cpp  RtosQueueSet.hpp  RtosTask.cpp  RtosTask.hpp
main/common/web_server_task/apis/: ApiFirmware.cpp  ApiFirmware.hpp  ApiLogging.cpp  ApiLogging.hpp  ApiNodes.cpp  ApiNodes.hpp  ApiResponse.cpp  ApiResponse.hpp  ApiSecurity.cpp  ApiSecurity.hpp  ApiStatus.cpp  ApiStatus.hpp  ApiSystem.cpp  ApiSystem.hpp  ApiValidator.cpp  ApiValidator.hpp  IApiFirmware.hpp  IApiLogging.hpp  IApiNodes.hpp  IApiSecurity.hpp  IApiStatus.hpp  IApiSystem.hpp  StaticFileHandler.hpp
main/common/web_server_task/website/: custom.css  logging.html  nodes.html  security.html
main/common/webserver_task/: ApiServer.cpp  ApiServer.hpp  IApiServer.hpp  IWebserverTask.hpp  WebserverTask.cpp  WebserverTask.hpp
main/common/webserver_task/apis/: ApiFirmware.cpp  ApiFirmware.hpp  ApiLogging.cpp  ApiLogging.hpp  ApiNodes.cpp  ApiNodes.hpp  ApiResponse.cpp  ApiResponse.hpp  ApiSecurity.cpp  ApiSecurity.hpp  ApiStatus.cpp  ApiStatus.hpp  ApiSystem.cpp  ApiSystem.hpp  ApiValidator.cpp  ApiValidator.hpp  IApiFirmware.hpp  IApiLogging.hpp  IApiNodes.hpp  IApiSecurity.hpp  IApiServer.hpp  IApiStatus.hpp  IApiSystem.hpp  StaticFileHandler.hpp
main/common/webserver_task/website/: custom.css  (+3 more)
main/project_dmx_controller/: run-dev.ps1
main/project_dmx_controller/master_task/: Contexts.hpp  DmxApiFactory.cpp  DmxApiFactory.hpp  DmxContextFactory.cpp  DmxContextFactory.hpp  IDmxApiFactory.hpp  IDmxContextFactory.hpp  IMasterNode.hpp  IMasterTask.hpp  MasterNode.cpp  MasterNode.hpp  MasterTask.cpp  MasterTask.hpp
main/project_dmx_controller/presets_task/: IPresetManager.hpp  Preset.hpp  PresetManager.cpp  PresetManager.hpp
main/project_dmx_controller/slave_node/: ISlaveNode.hpp  ISlaveTask.hpp  SlaveNode.cpp  SlaveNode.hpp  SlaveTask.cpp  SlaveTask.hpp
main/project_dmx_controller/web_server_task/: ApiServer.cpp  ApiServer.hpp  IApiServer.hpp  IWebServerTask.hpp  WebServerTask.cpp  WebServerTask.hpp
main/project_dmx_controller/webserver_task/: ApiServer.cpp  ApiServer.hpp  IApiServer.hpp  IWebserver.hpp  IWebserverTask.hpp  Webserver.cpp  Webserver.hpp  WebserverTask.cpp  WebserverTask.hpp
main/project_dmx_controller/website/: .prettierignore  configuration.html  control.html  dmx_controller_custom.css  edit_preset.html  edit_value.html  index.html  manual.html  package-lock.json  package.json  presets.html  security.html  server.py  vite.config.mjs
tests/: CMakeLists.txt
tests/cmake/: RunGcovr.cmake  RunOpenCppCoverage.cmake
tests/integration_tests/: AppMainIntegrationTest.cpp  BridgeIntegrationTest.cpp  CMakeLists.txt  DmxSenderIntegrationTest.cpp  PresetManagerIntegrationTest.cpp  main.cpp
tests/mocks/: EspHttpServerStub.cpp  EspLittleFsStub.cpp  EspLoggerStub.cpp  EspNvsStub.cpp  FreeRtosFactoryStub.cpp  IRtosQueueSet.cpp  MockCommonApiFactory.hpp  MockContextFactory.hpp  MockDmxApiFactory.hpp  MockDmxContextFactory.hpp  MockEspFactory.hpp  MockEspNowFactory.hpp  MockIApiConfig.hpp  MockIApiConfiguration.hpp  MockIApiFirmware.hpp  MockIApiLogging.hpp  MockIApiNodes.hpp  MockIApiPresetValues.hpp  MockIApiPresets.hpp  MockIApiSecurity.hpp  MockIApiServer.hpp  MockIApiStatus.hpp  MockIApiSystem.hpp  MockIEspHttpServer.hpp  MockIEspLittleFs.hpp  MockIEspLogger.hpp  MockIEspNow.hpp  MockIEspNvs.hpp  MockIFreeRtosFactory.hpp  MockIFunctionTask.hpp  MockILoggingTask.hpp  MockIMasterBridge.hpp  MockIMasterServiceTasks.hpp  MockIMasterTask.hpp  MockIOtaTask.hpp  MockIPresetManager.hpp  MockIRtosQueue.hpp  MockIRtosQueueSet.hpp  MockIServiceTasks.hpp  MockISlaveBridge.hpp  (+11 more)
tests/system_tests/: AppMainSystemTest.cpp  CMakeLists.txt
tests/system_tests/low_level_stubs/: EspHttpServerStub.cpp  EspLittleFsStub.cpp  EspLoggerStub.cpp  EspNowStub.cpp  EspNvsStub.cpp  FreeRtosFactoryStub.cpp  LowLevelStubCounters.cpp  LowLevelStubCounters.hpp
tests/system_tests/stubs/: TestDoubles.hpp
tests/unit_tests/: CMakeLists.txt
(+130 files in other folders)
