idf_component_register(
    SRCS
        "main.cpp"
        "common/bridge/master_bridge/MasterBridge.cpp"
        "common/bridge/slave_bridge/SlaveBridge.cpp"
        "common/context/CommonApiFactory.cpp"
        "common/context/ContextFactory.cpp"
        "common/context/EspFactory.cpp"
        "common/context/EspNowFactory.cpp"
        "common/esp/esp_file_systems/EspLittleFs.cpp"
        "common/esp/esp_http_server/EspHttpServer.cpp"
        "common/esp/esp_logger/EspLogger.cpp"
        "common/esp/esp_now/EspNow.cpp"
        "common/esp/esp_nvs/EspNvs.cpp"
        "common/node/Node.cpp"
        "common/service_tasks/logging_task/LoggingTask.cpp"
        "common/service_tasks/ota_task/OtaTask.cpp"
        "common/service_tasks/ServiceTasks.cpp"
        "common/service_tasks/status_task/StatusTask.cpp"
        "common/function_tasks/FunctionTask.cpp"
        "common/esp/free_rtos/FreeRtosFactory.cpp"
        "common/tasks/RtosTask.cpp"
        "common/tasks/RtosQueue.cpp"
        "common/tasks/RtosQueueSet.cpp"
        "common/tasks/IRtosQueueSet.cpp"
        "common/webserver_task/apis/ApiFirmware.cpp"
        "common/webserver_task/apis/ApiLogging.cpp"
        "common/webserver_task/apis/ApiNodes.cpp"
        "common/webserver_task/apis/ApiResponse.cpp"
        "common/webserver_task/apis/ApiSecurity.cpp"
        "common/webserver_task/apis/ApiStatus.cpp"
        "common/webserver_task/apis/ApiSystem.cpp"
        "common/webserver_task/apis/ApiValidator.cpp"
        "project_dmx_controller/master_task/DmxApiFactory.cpp"
        "project_dmx_controller/master_task/DmxContextFactory.cpp"
        "project_dmx_controller/master_task/MasterNode.cpp"
        "project_dmx_controller/master_task/MasterTask.cpp"
        "project_dmx_controller/presets_task/PresetManager.cpp"
        "project_dmx_controller/slave_node/SlaveNode.cpp"
        "project_dmx_controller/slave_node/SlaveTask.cpp"
        "project_dmx_controller/function_tasks/button_task/ButtonTask.cpp"
        "project_dmx_controller/function_tasks/dmx_max3485_sender_task/DmxMax3485SenderTask.cpp"
        "project_dmx_controller/function_tasks/gpio_led_task/GpioLedTask.cpp"
        "project_dmx_controller/function_tasks/max7219_task/Max7219Task.cpp"
        "project_dmx_controller/function_tasks/potmeter_task/PotmeterTask.cpp"
        "project_dmx_controller/webserver_task/apis/ApiConfig.cpp"
        "project_dmx_controller/webserver_task/apis/ApiConfiguration.cpp"
        "project_dmx_controller/webserver_task/apis/ApiPresets.cpp"
        "project_dmx_controller/webserver_task/apis/ApiPresetValues.cpp"
        "project_dmx_controller/webserver_task/ApiServer.cpp"
        "project_dmx_controller/webserver_task/WebserverTask.cpp"
    INCLUDE_DIRS
        "."
        "common"
        "common/esp"
        "common/esp/esp_http_server"
        "common/esp/esp_nvs"
        "common/esp/esp_now"
        "common/esp/esp_logger"
        "common/esp/esp_error"
        "common/esp/free_rtos"
        "common/esp/esp_file_systems"
        "common/context"
        "common/webserver_task"
        "common/webserver_task/apis"
        "project_dmx_controller"
        "project_dmx_controller/webserver_task/apis"
        "project_dmx_controller/presets_task"
)
